5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4327/executions/1861_1296.log
== TEST (2019-06-26 18:12:20) 
-- CODE:
from numpy import*
from numpy.linalg import*
x=array(int("entre com os numeros: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:12:46) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array(eval(int("entre com os numeros: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:14:33) 
-- CODE:
from numpy import*
from numpy.linalg import*

x =a rray(eval(int("entre com os numeros: ")))
-- ERROR:
File "XXXX", line 4
    x =a rray(eval(int("entre com os numeros: ")))
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:14:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(int("entre com os numeros: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:15:17) 
-- CODE:
from numpy import*
from numpy.linalg import*

Matriz = array(eval(int("entre com os numeros: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:17:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

Matriz = array(eval(int(input("entre com valores"))))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:18:01) 
-- CODE:
from numpy import*
from numpy.linalg import*

Matriz = array(eval(int(input("entre com valores"))))
print(matriz)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:19:03) 
-- CODE:
from numpy import*
from numpy.linalg import*

Matriz = array(eval(int(input("entre com valores"))))

print(matriz)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:19:21) 
-- CODE:
from numpy import*
from numpy.linalg import*

Matriz = array(eval(int(input("entre com valores"))))

print(matriz)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:23:52) 
-- CODE:
from numpy import*
from numpy.linalg import*

Matriz = array(eval(int(input("entre com valores"))))
list=shape(matriz)[8]
print(matriz)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:24:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

Matriz = array(eval(input("entre com valores")))
list=shape(matriz)[8]
print(matriz)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:25:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("entre com valores: ")))
list=shape(matriz)[9]
print(matriz)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:25:51) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("entre com valores: ")))
list=shape(matriz)[9]
print(matriz)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:26:40) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("entre com valores: ")))
print(matriz)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:31:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

matx = array(eval(input("entre x: ")))
num = shape(matrix)[3] 
print(matriz)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:33:23) 
-- CODE:
from numpy import*
from numpy.linalg import*

matx = array(eval(input("entre x: ")))
num = shape(matrix)[3] .dytape float

print(matriz)



-- ERROR:
File "XXXX", line 5
    num = shape(matrix)[3] .dytape float
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:33:41) 
-- CODE:
from numpy import*
from numpy.linalg import*

matx = array(eval(input("entre x: ")))
num = shape(matrix)[3] .dytape=float

print(matriz)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:34:03) 
-- CODE:
from numpy import*
from numpy.linalg import*

matx = array(eval(input("entre x: ")))
num = shape(matrix)[3] .dytape=float

print(matriz)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:34:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

matx = array(eval(input("entre x: ")))
num = shape(matrix)[3] .dytape=int

print(matriz)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:01:31) 
-- CODE:
from numpy import*
from numpy.linalg import*

matx = array(eval(input("entre x: ")))
matq= array(eval([8,10,16],[2,3,5,],[1,2,3]))

print(matx)
print(matq)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:04:09) 
-- CODE:
from numpy import*
from numpy.linalg import*

matx = array(eval(input("entre x: ")))
matq= array(eval([8,10,16],[2,3,5,],[1,2,3]))
res = dot(matq.inverse)
print(matx)
print(matq)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:10:35) 
-- CODE:
from numpy import*
from numpy.linalg import*

matx = array(eval(input("entre x: ")))
matq= array([8,10,16],[2,3,5],[1,2,3])
res = dot(inv.matq.matx)

print(res)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:11:20) 
-- CODE:
from numpy import*
from numpy.linalg import*

matx = array(eval(input("entre x: ")))
matq= array([8,10,16],[2,3,5],[1,2,3])
res = dot(inv.matq,matx)

print(res)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:13:32) 
-- CODE:
from numpy import*
from numpy.linalg import*

matx = array(eval(input("entre x: ")))
matq= array([8,10,16],[2,3,5],[1,2,3])
res = dot(inv.matq,matx)

print(round (res,0))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 19:13:38) 
-- CODE:
from numpy import*
from numpy.linalg import*

matx = array(eval(input("entre x: ")))
matq= array([8,10,16],[2,3,5],[1,2,3])
res = dot(inv.matq,matx)

print(round (res,0))




-- EXECUTION TIME:
1.20922
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1861/1296/main.py", line 5, in <module>
    matq= array([8,10,16],[2,3,5],[1,2,3])
ValueError: only 2 non-keyword arguments accepted

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 19:13:42) 
-- CODE:
from numpy import*
from numpy.linalg import*

matx = array(eval(input("entre x: ")))
matq= array([8,10,16],[2,3,5],[1,2,3])
res = dot(inv.matq,matx)

print(round (res,0))




-- EXECUTION TIME:
1.1985
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1861/1296/main.py", line 5, in <module>
    matq= array([8,10,16],[2,3,5],[1,2,3])
ValueError: only 2 non-keyword arguments accepted

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:19:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

matx = array(eval(input("entre x: ")))
matqb = array([8,10,16],[2,3,5],[1,2,3])
res = dot(inv.matq,matx) .dtype=float


print(round (res,0))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:19:38) 
-- CODE:
from numpy import*
from numpy.linalg import*

matx = array(eval(input("entre x: ")))
matqb = array([8,10,16],[2,3,5],[1,2,3])
res = dot(inv.matq,matx) .dtype=float


print(round (res,0))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
